# kernel-gym

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
kernel_gym/: BUILD  __init__.py
kernel_gym/dsl/: BUILD  action.py  bpf_template.py  function.py  observer.py
kernel_gym/envs/: BUILD  kernel_gym.py  kernel_gym_env.py
kernel_gym/server/: bpf_server.py
kernel_gym/service/: BPFService.py  BUILD  __init__.py  bpf_connection.py  bpf_service.py  proto2py.py
kernel_gym/service/bpf/: __init__.py  bpf_render.py  bpf_template.py
kernel_gym/service/proto/: BUILD  __init__.py  kernel_gym_service.proto
kernel_gym/spaces/: BUILD  __init__.py  scalar.py
kernel_gym/utils/: BUILD  register.py
kernel_gym/views/: BUILD  __init__.py  observation.py  observation_space.py
tests/: bpf_test.py  dsl_test.py  gym_test.py  test_kernel_gym.py
tests/service/: test_BPFservice.py  test_bpf_service.py
tests/views/: BUILD  observation_test.py  test_observation.py
